[package]
name = "trig-visualization"
version = "0.1.0"
authors = ["nic96 <nic96@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
]

native = [
    "bevy/bevy_wgpu",
]

web = [
    "bevy_webgl2",
    "wasm-bindgen",
    "winit/web-sys",
    "web-sys",
]

[dependencies]
bevy = {version="0.4.0", default-features=false}
bevy_webgl2 = {version="0.4.0", optional=true}
wasm-bindgen = { version = "0.2.70", optional = true }
web-sys = { version = "0.3", optional = true }
crossbeam-channel = "0.5.0"
bevy_prototype_lyon = "0.2"
num-traits = "0.2"
winit = {version = "0.24.0"}
rand = "0.7"
getrandom = {version="0.1", features=["wasm-bindgen"]}

[profile.dev]
opt-level = 2

# use same profile for test as dev to avoid recompiling
[profile.test]
opt-level = 2

[profile.release]
lto = true

[profile.bench]
lto = true
